; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ctrl_iface_ap.c_hostapd_ctrl_iface_pmksa_add.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ctrl_iface_ap.c_hostapd_ctrl_iface_pmksa_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostapd_data = type { i32 }

@ETH_ALEN = common dso_local global i32 0, align 4
@PMKID_LEN = common dso_local global i32 0, align 4
@PMK_LEN_MAX = common dso_local global i32 0, align 4
@PMK_LEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"%d %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hostapd_ctrl_iface_pmksa_add(%struct.hostapd_data* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hostapd_data*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.hostapd_data* %0, %struct.hostapd_data** %4, align 8
  store i8* %1, i8** %5, align 8
  %16 = load i32, i32* @ETH_ALEN, align 4
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %6, align 8
  %19 = alloca i32, i64 %17, align 16
  store i64 %17, i64* %7, align 8
  %20 = load i32, i32* @PMKID_LEN, align 4
  %21 = zext i32 %20 to i64
  %22 = alloca i32, i64 %21, align 16
  store i64 %21, i64* %8, align 8
  %23 = load i32, i32* @PMK_LEN_MAX, align 4
  %24 = zext i32 %23 to i64
  %25 = alloca i32, i64 %24, align 16
  store i64 %24, i64* %9, align 8
  store i32 0, i32* %13, align 4
  store i32 0, i32* %14, align 4
  %26 = load i8*, i8** %5, align 8
  %27 = call i64 @hwaddr_aton(i8* %26, i32* %19)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

30:                                               ; preds = %2
  %31 = load i8*, i8** %5, align 8
  %32 = call i8* @os_strchr(i8* %31, i8 signext 32)
  store i8* %32, i8** %11, align 8
  %33 = load i8*, i8** %11, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %36, label %35

35:                                               ; preds = %30
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

36:                                               ; preds = %30
  %37 = load i8*, i8** %11, align 8
  %38 = getelementptr inbounds i8, i8* %37, i32 1
  store i8* %38, i8** %11, align 8
  %39 = load i8*, i8** %11, align 8
  %40 = load i32, i32* @PMKID_LEN, align 4
  %41 = sext i32 %40 to i64
  %42 = call i64 @hexstr2bin(i8* %39, i32* %22, i64 %41)
  %43 = icmp slt i64 %42, 0
  br i1 %43, label %44, label %45

44:                                               ; preds = %36
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

45:                                               ; preds = %36
  %46 = load i8*, i8** %11, align 8
  %47 = call i8* @os_strchr(i8* %46, i8 signext 32)
  store i8* %47, i8** %11, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %51, label %50

50:                                               ; preds = %45
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

51:                                               ; preds = %45
  %52 = load i8*, i8** %11, align 8
  %53 = getelementptr inbounds i8, i8* %52, i32 1
  store i8* %53, i8** %11, align 8
  %54 = load i8*, i8** %11, align 8
  %55 = call i8* @os_strchr(i8* %54, i8 signext 32)
  store i8* %55, i8** %12, align 8
  %56 = load i8*, i8** %12, align 8
  %57 = icmp ne i8* %56, null
  br i1 %57, label %59, label %58

58:                                               ; preds = %51
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

59:                                               ; preds = %51
  %60 = load i8*, i8** %12, align 8
  %61 = load i8*, i8** %11, align 8
  %62 = ptrtoint i8* %60 to i64
  %63 = ptrtoint i8* %61 to i64
  %64 = sub i64 %62, %63
  %65 = sdiv i64 %64, 2
  store i64 %65, i64* %10, align 8
  %66 = load i64, i64* %10, align 8
  %67 = load i64, i64* @PMK_LEN, align 8
  %68 = icmp ult i64 %66, %67
  br i1 %68, label %79, label %69

69:                                               ; preds = %59
  %70 = load i64, i64* %10, align 8
  %71 = load i32, i32* @PMK_LEN_MAX, align 4
  %72 = sext i32 %71 to i64
  %73 = icmp ugt i64 %70, %72
  br i1 %73, label %79, label %74

74:                                               ; preds = %69
  %75 = load i8*, i8** %11, align 8
  %76 = load i64, i64* %10, align 8
  %77 = call i64 @hexstr2bin(i8* %75, i32* %25, i64 %76)
  %78 = icmp slt i64 %77, 0
  br i1 %78, label %79, label %80

79:                                               ; preds = %74, %69, %59
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

80:                                               ; preds = %74
  %81 = load i8*, i8** %12, align 8
  %82 = getelementptr inbounds i8, i8* %81, i64 1
  store i8* %82, i8** %11, align 8
  %83 = load i8*, i8** %11, align 8
  %84 = call i32 @sscanf(i8* %83, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32* %14, i32* %13)
  %85 = icmp ne i32 %84, 2
  br i1 %85, label %86, label %87

86:                                               ; preds = %80
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

87:                                               ; preds = %80
  %88 = load %struct.hostapd_data*, %struct.hostapd_data** %4, align 8
  %89 = getelementptr inbounds %struct.hostapd_data, %struct.hostapd_data* %88, i32 0, i32 0
  %90 = load i32, i32* %89, align 4
  %91 = load i64, i64* %10, align 8
  %92 = load i32, i32* %14, align 4
  %93 = load i32, i32* %13, align 4
  %94 = call i32 @wpa_auth_pmksa_add2(i32 %90, i32* %19, i32* %25, i64 %91, i32* %22, i32 %92, i32 %93)
  store i32 %94, i32* %3, align 4
  store i32 1, i32* %15, align 4
  br label %95

95:                                               ; preds = %87, %86, %79, %58, %50, %44, %35, %29
  %96 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %96)
  %97 = load i32, i32* %3, align 4
  ret i32 %97
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @hwaddr_aton(i8*, i32*) #2

declare dso_local i8* @os_strchr(i8*, i8 signext) #2

declare dso_local i64 @hexstr2bin(i8*, i32*, i64) #2

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*) #2

declare dso_local i32 @wpa_auth_pmksa_add2(i32, i32*, i32*, i64, i32*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
